syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme";
option java_outer_classname = "HelloGrpcProto";

package hello;

service HelloGrpc {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service HelloGrpcClientStream{
    rpc SayHello(stream HelloRequest) returns (HelloReply){}
}

service HelloGrpcServerStream{
    rpc SayHello(HelloRequest) returns(stream HelloReply){}
}

service HelloGrpcBidi{
    rpc SayHello(stream HelloRequest) returns (stream HelloReply){}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
